// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onLoad={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {color} (only Native) 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    color="#d33c44"
    onLoad={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {invert} (only Web) 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    invert={true}
    onLoad={[Function]}
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {ratio} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://imgs-akamai.mnstatic.com//tools//genericimages//fc5b42a5baceed399c3bb913406693fd3d4d64ef8bb69457697c90cb71b2c4dd.jpg?fit=around|102:76",
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {responsive} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://imgs-akamai.mnstatic.com//tools//genericimages//fc5b42a5baceed399c3bb913406693fd3d4d64ef8bb69457697c90cb71b2c4dd.jpg?fit=around|1024:768",
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {size} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onLoad={[Function]}
    size={48}
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 3,
          "height": 6,
          "marginHorizontal": 3,
          "opacity": 0,
          "width": 6,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 3,
          "height": 6,
          "marginHorizontal": 3,
          "opacity": 0,
          "width": 6,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 3,
          "height": 6,
          "marginHorizontal": 3,
          "opacity": 0,
          "width": 6,
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {source} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <Image
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://picsum.photos/320/200/?random",
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;

exports[`<Image> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "backgroundColor": "#F5F5F6",
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#a66ecc",
      },
    ]
  }
>
  <Image
    onLoad={[Function]}
    style={
      Object {
        "backgroundColor": "#a66ecc",
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "white",
          "borderRadius": 6,
          "height": 10,
          "marginHorizontal": 5.454545454545454,
          "opacity": 0,
          "width": 10,
        }
      }
    />
  </View>
</View>
`;
